Fix for accessibility/mac/replace-text-with-range-on-webarea-element.html in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=233160 <rdar://problem/85436385>

Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/mac/replace-text-with-range-on-webarea-element.html

The replacement and insertion text string is now properly isolatedCopied
in the AXIsolatedObject method instead of in the wrapper.

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::replaceTextInRange):
(WebCore::AXIsolatedObject::insertText):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityReplaceRange:withText:]):
(-[WebAccessibilityObjectWrapper accessibilityInsertText:]):

Tools:

* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::stringValue):
(WTR::AccessibilityUIElement::replaceTextInRange):
Dispatches to the AX thread the call to the wrapper's
[accessibilityReplaceRange withText:] method.



Canonical link: https://commits.webkit.org/244298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285872 268f45cc-cd09-0410-ab3c-d52691b4dbfc